# wxtemplate

./: .gitignore  CMakeLists.txt  Info.plist  README.DEVELOPER.md  README.md  make-appimage.sh  mywxapp1.desktop
graphics/appicon/: README.md  app.rc  appicon.xpm  icon.icns
src/: licenses.cpp  licenses.h  main.cpp
